--- a/client/src/index.css
+++ b/client/src/index.css
@@ -683,6 +683,7 @@ code {
   width: 40px;
   height: 40px;
   line-height: 40px;
+  border: 0.5px solid blanchedalmond;
   border-radius: 50%;
   color: #f5f5f5;
   text-align: center;
