--- a/client/src/index.css
+++ b/client/src/index.css
@@ -359,11 +359,11 @@ code {
 }
 
 .show-yellow-text {
-  /* border-bottom: 2px solid yellow; */
+  color: #f55f20;
 }
 
 .show-red-text {
-  /* border-bottom: 2px solid red; */
+  color: #ff0000;
 }
 
 .activity-box {
