--- a/client/src/index.css
+++ b/client/src/index.css
@@ -147,48 +147,12 @@ code {
   background-color: white;
 }
 
-.fields-list {
-  display: flex;
-  list-style-type: none;
-  justify-content: flex-start;
-  padding: 0 0 0 0;
-  flex-wrap: wrap;
-  margin: 0.5vh 0.6vw 0.8vh 0.5vw;
-}
-
-.field-list-item {
-  text-align: center;
-  display: flex;
-  margin: 0.5vh 0 0 1.2vw;
-}
-
-.round-button {
-  width: 30px;
-  height: 30px;
-  line-height: 30px;
-  border: 0.5px solid blanchedalmond;
-  border-radius: 50%;
-  color: #f5f5f5;
-  text-align: center;
-  text-decoration: none;
-  background: #486a47;
-  box-shadow: 0 0 3px gray;
-  font-size: 20px;
-  font-weight: bold;
-}
-
 .gy-holder {
   margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   max-height: 77vh;
-  width: 100%;
-}
-
-.fields-box {
-  margin: 0;
-  padding: 0;
   width: 100%;
 }
 
@@ -217,6 +181,96 @@ code {
   -webkit-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1);
   -moz-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1);
   box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1);
+}
+
+.fields-box {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-height: 70px;
+  display: flex;
+  flex-direction: row;
+}
+
+.activity-selector {
+  font-size: 0.8em;
+  width: 15%;
+  margin-right: 3vw;
+  margin-top: 1vh;
+  margin-bottom: 1.5vh;
+  border: 1px solid #486a47;
+  border-radius: 10%;
+  text-align: center;
+}
+
+.activity-selector h5 {
+  padding: 0;
+  margin: 0;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+}
+
+.activity-selector-list-container {
+  position: fixed;
+  right: 30%;
+  top: 10%;
+  bottom: 20%;
+  display: none;
+  z-index: 9999;
+}
+
+.activity-selector-list {
+}
+
+.activity-selector-li {
+  background-color: #c9aa88;
+  border-radius: 10px;
+  width: 35vw;
+  height: 8vh;
+  display: flex;
+  flex-direction: row;
+  margin-top: 2vh;
+  font-size: 0.8em;
+}
+
+.activity-selector-li img {
+  max-height: 5vh;
+  margin: 1vh 2vw auto 2vw;
+}
+
+.show-list {
+  display: flex;
+}
+
+.fields-list {
+  display: flex;
+  list-style-type: none;
+  justify-content: flex-start;
+  padding: 0 0 0 0;
+  flex-wrap: wrap;
+  margin: 0.5vh 0.6vw 0.8vh 0.5vw;
+  width: 85%;
+}
+
+.field-list-item {
+  text-align: center;
+  display: flex;
+  margin: 0.5vh 0 0 1.2vw;
+}
+
+.round-button {
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  border: 0.5px solid blanchedalmond;
+  border-radius: 50%;
+  color: #f5f5f5;
+  text-align: center;
+  text-decoration: none;
+  background: #486a47;
+  box-shadow: 0 0 3px gray;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .infobox {
@@ -359,11 +413,11 @@ code {
 }
 
 .show-yellow-text {
-  color: #f55f20;
+  border-bottom: 2px solid #f55f20;
 }
 
 .show-red-text {
-  color: #ff0000;
+  border-bottom: 2px solid #ff0000;
 }
 
 .activity-box {
