--- a/client/src/index.css
+++ b/client/src/index.css
@@ -229,7 +229,9 @@ code {
 }
 
 .activity-selector-li {
-  background-color: #c9aa88;
+  background: linear-gradient(to right, #ffffff, #d4dfbb);
+  border-right: 1px solid black;
+
   border-radius: 10px;
   width: 25vw;
   max-width: 150px;
@@ -237,11 +239,12 @@ code {
   display: flex;
   flex-direction: row;
   margin: 0.2vh 0 0.5vh 1vw;
-  font-size: 0.6em;
+  font-size: 0.65em;
+  box-shadow: 1px 1px 3px black;
 }
 
 .activity-selector-li img {
-  max-height: 5vh;
+  max-height: 4.5vh;
   margin: 0.5vh 1vw auto 2vw;
 }
 
@@ -249,7 +252,7 @@ code {
 }
 
 .activity-selector img {
-  max-height: 4.5vh;
+  max-height: 5.5vh;
   margin-top: 0.8vh;
   margin-bottom: 0;
 }
@@ -791,15 +794,15 @@ code {
   width: 32px;
   height: 32px;
   line-height: 32px;
-  border: 0.5px solid blanchedalmond;
+  border: 0.5px solid white;
   border-radius: 50%;
-  color: #f5f5f5;
+  color: white;
   text-align: center;
   text-decoration: none;
   background: #486a47;
   -webkit-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1);
   -moz-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1);
-  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 1);
+  box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 1);
   font-size: 20px;
   font-weight: bold;
 }
@@ -808,7 +811,7 @@ code {
   width: 32px;
   height: 32px;
   line-height: 32px;
-  border: 0.5px solid blanchedalmond;
+  border: 0.5px solid white;
   border-radius: 50%;
   color: #f5f5f5;
   text-align: center;
@@ -1325,8 +1328,9 @@ code {
 }
 
 .show-yellow-button {
-  background: #ffd830;
+  background: #ffc000;
   text-shadow: 0px 0px 4px black;
+  opacity: 0.8;
 }
 
 .show-red-button {
