--- a/client/src/index.css
+++ b/client/src/index.css
@@ -200,6 +200,7 @@ code {
   margin-right: 3vw;
   margin-top: 0.5vh;
   margin-bottom: 1.5vh;
+  background: linear-gradient(to right, white, #d4dfbb);
   border-radius: 10%;
   display: flex;
   flex-direction: column;
@@ -360,6 +361,7 @@ code {
   flex-shrink: 5;
   min-height: 27.5vh;
   max-height: 29vh;
+
   color: black;
   vertical-align: text-bottom;
 }
@@ -379,6 +381,7 @@ code {
   border-radius: 10px;
   font-size: 0.7em;
   margin: 0;
+
   border: 1px solid #486a47;
 
   -webkit-box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 1);
@@ -393,6 +396,7 @@ code {
   padding: 0;
   border-radius: 10px;
   font-size: 0.7em;
+
   border: 1px solid #486a47;
 
   -webkit-box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 1);
