--- a/client/src/index.css
+++ b/client/src/index.css
@@ -191,18 +191,16 @@ body,
   margin: 0;
   padding: 0;
   width: 95%;
-  /* height: 85px; */
   display: flex;
   flex-direction: row;
 }
 
 .activity-selector {
-  max-height: 70px;
+  height: 60px;
   font-size: 0.8em;
   width: 15%;
-  min-width: 15%;
   margin: 0.5vh 3vw 1.5vh 1.5vw;
-  background: linear-gradient(to right, white, #d4dfbb);
+  background: white;
   border-radius: 10%;
   display: flex;
   flex-direction: column;
@@ -216,7 +214,7 @@ body,
   margin: 0;
   font-weight: 600;
   letter-spacing: 0.5px;
-  margin-bottom: 5px;
+  margin-bottom: 1px;
 }
 
 .activity-selector-list-container {
@@ -318,15 +316,6 @@ body,
   flex-direction: row;
 }
 
-.fields-list {
-  display: flex;
-  list-style-type: none;
-  justify-content: flex-start;
-  padding: 0 0 0 0;
-  flex-wrap: wrap;
-  margin: 0 0.6vw 1.8vh 0.5vw;
-  width: 85%;
-}
 
 .field-list-item {
   text-align: center;
