--- a/client/src/stylesheets/projectInfo.css
+++ b/client/src/stylesheets/projectInfo.css
@@ -79,6 +79,8 @@
     padding: 0;
     list-style-type: none;
     max-height: 30vh;
+    display: flex;
+    flex-direction: column;
     overflow-y: auto;
   }
   
