--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,13 +26,9 @@ body {
 }
 
 
-:root {
+#root {
   --color-background: white;
-  --font-size: ;
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  min-height: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 
