--- a/client/src/index.css
+++ b/client/src/index.css
@@ -81,10 +81,10 @@ body {
 
 .activity-box {
   position: absolute;
-  bottom: 0.5vh;
+  bottom: 10px;
   width: 95%;
   height: 11vh;
-  margin: 0 2.5% 0 2.5%;
+  margin: 0 2.5% 5px 2.5%;
 }
 
 .input-body {
